Fix image aspect ratio issues and disable automatic dark mode

--- a/magellan/resources/css/app.css
+++ b/magellan/resources/css/app.css
@@ -7,18 +7,15 @@
 }
 
 @layer base {
-
     h2 {
       @apply mt-10 mb-3 text-2xl font-bold tracking-tight text-gray-900;
     }
 
     img {
-        @apply object-cover aspect-video rounded-xl bg-gray-50;
-      }
+        @apply rounded-xl bg-gray-50;
+    }
 
     figcaption {
         @apply flex mt-4 text-sm leading-6 text-gray-500 gap-x-2;
     }
-
-
 }
